# spi_flash

./: Cargo.toml  README.md
docs/: index.html
src/: device.rs  error.rs  interface.rs  lib.rs  misc.rs  mock.rs  types.rs
src/device/: erase.rs  internal.rs  mod.rs  public.rs  read.rs  write.rs
tests/: integration_tests.rs
