[package]
name = "spi_flash"
version = "0.1.0"
edition = "2024"
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]
description = "no_std SPI flash driver for Winbond W25Q and similar devices"
license = "MIT"
repository = "https://github.com/shishir-dey/spi_flash"
keywords = ["spi", "flash", "no-std"]
categories = ["embedded", "hardware-support"]

[dependencies]
